--- a/WebPack5/package.json
+++ b/WebPack5/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "build": "webpack --config webpack.production.config.js",
     "dev": "webpack serve --config webpack.dev.config.js --hot",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2"
   },
